@@ -1317,6 +1317,49 @@ name|deletePendingFiles
 argument_list|()
 expr_stmt|;
 block|}
+comment|/**    * Revisits the {@link IndexDeletionPolicy} by calling its    * {@link IndexDeletionPolicy#onCommit(List)} again with the known commits.    * This is useful in cases where a deletion policy which holds onto index    * commits is used. The application may know that some commits are not held by    * the deletion policy anymore and call    * {@link IndexWriter#deleteUnusedFiles()}, which will attempt to delete the    * unused commits again.    */
+DECL|method|revisitPolicy
+name|void
+name|revisitPolicy
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|infoStream
+operator|!=
+literal|null
+condition|)
+block|{
+name|message
+argument_list|(
+literal|"now revisitPolicy"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|commits
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+name|policy
+operator|.
+name|onCommit
+argument_list|(
+name|commits
+argument_list|)
+expr_stmt|;
+name|deleteCommits
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|deletePendingFiles
 specifier|public
 name|void
