@@ -31621,6 +31621,217 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|testDeleteUnsedFiles2
+specifier|public
+name|void
+name|testDeleteUnsedFiles2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Validates that iw.deleteUnusedFiles() also deletes unused index commits
+comment|// in case a deletion policy which holds onto commits is used.
+name|Directory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|SnapshotDeletionPolicy
+name|sdp
+init|=
+operator|new
+name|SnapshotDeletionPolicy
+argument_list|(
+operator|new
+name|KeepOnlyLastCommitDeletionPolicy
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|)
+argument_list|)
+operator|.
+name|setIndexDeletionPolicy
+argument_list|(
+name|sdp
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// First commit
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"c"
+argument_list|,
+literal|"val"
+argument_list|,
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Index
+operator|.
+name|ANALYZED
+argument_list|,
+name|TermVector
+operator|.
+name|WITH_POSITIONS_OFFSETS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Keep that commit
+name|sdp
+operator|.
+name|snapshot
+argument_list|()
+expr_stmt|;
+comment|// Second commit - now KeepOnlyLastCommit cannot delete the prev commit.
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"c"
+argument_list|,
+literal|"val"
+argument_list|,
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Index
+operator|.
+name|ANALYZED
+argument_list|,
+name|TermVector
+operator|.
+name|WITH_POSITIONS_OFFSETS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Should delete the unreferenced commit
+name|sdp
+operator|.
+name|release
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|deleteUnusedFiles
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|class|FlushCountingIndexWriter
 specifier|private
 specifier|static
